# mcq-tui

./: .gitignore  AGENTS.md  CONTEXT.md  INSTALL.md  README.md  example_questions.yaml  mcq_tui.py  pyproject.toml
.cursor/rules/: project.mdc
src/: __init__.py  answer_formatting.py  console.py  constants.py  display.py  export.py  input_handlers.py  navigation.py  parser.py  question.py  terminal.py
tests/: SMOKE_TESTING.md  TESTING.md  __init__.py  test_interactive.py  test_mcq_tui.py  test_simple.py  test_utilities.py
tests/fixtures/: smoke_test.yaml
